tests/ui/intrinsics/const-eval-select-stability.stderr
error: const-stable function cannot use `#[feature(const_eval_select)]`
  --> $DIR/const-eval-select-stability.rs:17:5
   |
LL |     const_eval_select((), nothing, log);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: if it is not part of the public API, make this function unstably const
   |
LL + #[rustc_const_unstable(feature = "...", issue = "...")]
LL | pub const unsafe fn hey() {
   |
help: otherwise `#[rustc_allow_const_fn_unstable]` can be used to bypass stability checks
   |
LL + #[rustc_allow_const_fn_unstable(const_eval_select)]
LL | pub const unsafe fn hey() {
   |

error: aborting due to 1 previous error

